Added missing swagger docs for delete image
